Closed Bug 1713409 Opened 3 years ago Closed 3 years ago

Fix SwCompositor max_update_rects performance regression

Categories

(Core :: Graphics: WebRender, defect)

defect

Tracking

()

RESOLVED FIXED
90 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox88 --- unaffected
firefox89 --- unaffected
firefox90 --- fixed

People

(Reporter: lsalzman, Assigned: lsalzman)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: regression)

Attachments

(1 file)

Prior to bug 1712871, when SwCompositor was instantiated, max_update_rects was always 1 for SwCompositor. Bug 1712871 inadvertently made it default to 0 on Linux, which is not what we want, and caused the following talos regressions:
https://treeherder.mozilla.org/perfherder/alerts?id=30216
https://treeherder.mozilla.org/perfherder/alerts?id=30217

Assignee: nobody → lsalzman
Status: NEW → ASSIGNED
Pushed by lsalzman@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/ca4db07f5cb0
Always support a single update rect for SwCompositor. r=gfx-reviewers,jrmuizel
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 90 Branch
See Also: → 1714025
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: